--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -117,6 +117,11 @@ body {
       font-size: 72px;
       font-weight: map-get($map: $font-weight, $key: bold);
     }
+    @media screen and (max-width: 768px) {
+      h1 {        
+        font-size: 48px;
+      }
+    }
   }
 
   .stat {
