--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -100,6 +100,7 @@ body .pt-35 {
 body .title h1 {
   font-size: 72px;
   font-weight: 700;
+  line-height: 150%;
 }
 
 @media screen and (max-width: 768px) {
@@ -115,6 +116,12 @@ body .stat {
 body .stat h2 {
   font-size: 48px;
   font-weight: 800;
+}
+
+@media screen and (max-width: 768px) {
+  body .stat h2 {
+    font-size: 28px;
+  }
 }
 
 body .stat p {
