--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -90,15 +90,15 @@ body {
       }
 
       @media screen and (min-width: 993px) {
-          margin-left: 500px;
+          margin-left: 525px;
       }
     }
   }
 
-  .pl-124 {    
+  .pl-house {    
     @media screen and (min-width: 900px) {
       margin: 0 !important;
-      padding-left: 124px;
+      padding-left: 61px;
     }
     @media screen and (max-width: 900px) {
       margin: 0 5px 0 5px !important;
@@ -130,6 +130,9 @@ body {
     @media screen and (max-width: 768px) {
       padding-top: 50px;
       padding-bottom: 50px;
+    }
+    .descript-explore {
+      max-width: 75%;
     }
   }
 
@@ -170,6 +173,10 @@ body {
       font-weight: map-get($map: $font-weight, $key: regular);
       line-height: 28px;
     }
+
+    .descript-head {
+      max-width: 90%;
+    }
   }
 
   .btn-blue {
@@ -179,6 +186,73 @@ body {
     font-size: 16px;
     border-radius: 12px;
     margin-top: 48px;
+  }
+
+  .gallery {
+    padding: 10px 0;
+    @media only screen and (max-width: 768px) {
+      margin: 50px 0;
+    }
+    .card-hotel-carousel {
+      width: 325px;
+      margin-right: 64px;
+      padding: 28px 28px 40px;
+      border-radius: 28px;
+      background: white;
+      box-shadow: 20px 8px 18px rgba(178, 177, 255, 0.05);
+
+      @media only screen and (max-width: 768px) {
+        margin-right: 20px;
+      }
+
+      .image-placeholder {
+        width: 268px;
+        height: 190px;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border-radius: 16px;
+        }
+      }
+
+      .card-details {
+        padding-bottom: 53px;
+        height: 150px;
+        .caption {
+          font-weight: map-get($map: $font-weight, $key: bold);
+          font-size: 24px;
+          color: $black;
+          margin-top: 24px;
+        }
+        .sub-caption {
+          font-weight: map-get($map: $font-weight, $key: regular);
+          color: $grey;
+        }
+      }
+
+      .bottom-text {
+        .price-content {
+          color: $black;
+          font-size: 16px;
+          span {
+            font-weight: map-get($map: $font-weight, $key: regular);
+          }
+          span.price {
+            font-weight: map-get($map: $font-weight, $key: bold);
+          }
+        }
+        .rating {
+          img {
+            margin-top: -1px;
+            margin-right: 5px;
+          }
+          font-weight: map-get($map: $font-weight, $key: bold);
+          font-size: 16px;
+          color: $orange;
+        }
+      }
+    }
   }
 
   .image-content {
@@ -250,14 +324,21 @@ body {
 
   .img-explore {
     height: 600px;
+    // width: 100%;
     padding: 0;
+    @media only screen and (max-width: 768px) {
+      height: 300px;
+    }
     img {
-      width: 452px !important;
+      width: 380px !important;
       height: 100%;
       -o-object-fit: cover;
       object-fit: cover;
       border-radius: 24px;
       margin-right: 72px;
+      @media only screen and (max-width: 768px) {
+        width: 226px !important;
+      }
     }
   }
 
@@ -323,6 +404,7 @@ body {
       .card {
         border-radius: 28px;
         border: none !important;
+        box-shadow: 20px 8px 18px rgba(178, 177, 255, 0.05);
         p {
           color: $dusty-grey;
         }
